--- a/project_info.json
+++ b/project_info.json
@@ -1,1 +1,1 @@
-{"gitStatus":"CLONE_COMPLETED","testStatus":0,"submitStatus":0,"userRepo":"https://github.com/aishukeerthi/MissionRnD-CMrndTest3.git","currentTestResult":null,"workingDirectory":"C:\\Users\\Aditya\\MissionRnDProjects\\Cmrnd-finaltest"}
+{"gitStatus":"REPO_CREATED","testStatus":3,"submitStatus":0,"userRepo":"https://github.com/aishukeerthi/MissionRnD-CMrndTest3.git","currentTestResult":true,"workingDirectory":"C:\\Users\\Aditya\\MissionRnDProjects\\Cmrnd-finaltest"}
